--- a/android/app/src/main/res/layout/levi_custom_video_view.xml
+++ b/android/app/src/main/res/layout/levi_custom_video_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:clickable="true"
-    android:focusable="true">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -56,4 +56,4 @@
             android:visibility="invisible"/>
     </RelativeLayout>
 
-</FrameLayout>
+</LinearLayout>
